agregator/kubernetes/db_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: egs10
  labels:
    app: postgres-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-container
  template:
    metadata:
      labels:
        app: postgres-container
    spec:
      containers:
        - name: postgres-container
          image: postgres:9.6.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume-mount
              mountPath: /var/lib/postgresql/data2

      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pv2-claim

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: egs10
spec:
  ports:
    - protocol: TCP
      port: 5432
      name: postgres-service
  selector:
    app: postgres-container
